--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -113,8 +113,8 @@
               <div class="col-6" *ngIf="showApplicationForm">
                 <form [formGroup]="createApplicationForm">
                   <div class="form-group">
-                    <label>Application Name <span class="mandatory">*</span></label>
-                    <input type="text" appLowercase class="form-control" [readonly]="editMode || applicationId" formControlName="name"  [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
+                    <label>Application Name <span class="mandatory">* </span> <i data-toggle="tooltip" data-placement="top" data-original-title="Application name must start with an alphabet and must not contain special charater or spaces." class="fa fa-question-circle" aria-hidden="true"></i></label>
+                    <input type="text" appLowercase tooltip="test"  tooltip-trigger="focus" tooltip-placement="right" class="form-control" [readonly]="editMode || applicationId" formControlName="name"  [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
                     <span *ngIf="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched"
                       class="invalid-feedback">
                       <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
@@ -171,7 +171,7 @@
                  <div class="col-8 pull-right"  *ngIf="showApplicationForm">
                   <div class="page_access text-right py-2 px-3">
                     <button class="btn btn-primary ml-2" *ngIf="editMode" (click)="SubmitApplicationForm()">Update & Next</button>
-                    <button class="btn btn-primary ml-2" *ngIf="!editMode" (click)="SubmitApplicationForm()">Save & Next</button>
+                    <button class="btn btn-primary ml-2 disabledFontColor" *ngIf="!editMode"  [disabled]="createApplicationForm.invalid" (click)="SubmitApplicationForm()">Save & Next</button>
                     <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                     <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                    
@@ -193,11 +193,11 @@
                       <div class="row" *ngFor="let serviceArr of servicesForm.get('services')['controls']; let i=index">
                         <div class="col-12 padding0" [formGroupName]="i" *ngIf="currentServiceIndex == i">                          
                           <div class="col-6 form-group mb-3 text-muted padding0">
-                            <label>Service Name <span class="mandatory">*</span></label>
+                            <label>Service Name <span class="mandatory">* </span><i data-toggle="tooltip" data-placement="top" data-original-title="Service name must start with an alphabet and must not contain special charater or spaces." class="fa fa-question-circle" aria-hidden="true"></i></label>
                             <div class="d-flex  mr-4 align-items-center">
                               <input type="text" appLowercase class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
-                              <button [disabled]="serviceStatus[i] == 'Edit'" class="btn btn-primary ml-4" type="submit" (click)="saveServiceForm(i)" >Save</button>
+                              <button [disabled]="serviceStatus[i] == 'Edit' || (servicesForm.invalid )  " class="btn btn-primary ml-4 disabledFontColor" type="submit" (click)="saveServiceForm(i)" >Save</button>
                               <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
                               <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
