Services flow and 2nd tab

--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-topics/log-topics.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-topics/log-topics.component.html
@@ -1,1 +1,2 @@
-<p>log-topics works!</p>
+<opsmx-form-grid [height]="'260px'" [header]="service.formGridHeaders" [formArrayObj]="logTopicsForm"
+    (onChange)="onChange($event)" (addRow)="addRow($event)" (deleteRow)="deleteRow($event)"></opsmx-form-grid>
