--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
@@ -5,27 +5,42 @@
               <form [formGroup]="firstFormGroup">
                 <ng-template matStepLabel>Log Provider</ng-template>
                 <app-log-provider></app-log-provider>
-                <div>
-                  <button mat-button matStepperNext>Next</button>
+                <br>
+                <br>
+                <div class="float-left">
+                  <button mat-button (click)="close()" class="btn btn-secondary default-border">Close</button>
+                </div>
+                <div class="float-right">
+                  <button mat-button matStepperNext class="btn btn-primary">Next</button>
                 </div>
               </form>
             </mat-step>
-            <mat-step [stepControl]="secondFormGroup">
-              <form [formGroup]="secondFormGroup">
+            <mat-step [stepControl]="logTopicsForm">
+              <form [formGroup]="logTopicsForm">
                 <ng-template matStepLabel>Log Topics</ng-template>
-                <app-log-topics></app-log-topics>
-                <div>
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
+                <div *ngIf="loadLogTopicsComponent">
+                  <app-log-topics></app-log-topics>
+                </div>
+                <br><br>
+                <div class="float-left">
+                  <button  (click)="close()" mat-button matStepperNext class="btn btn-secondary default-border">Close</button>
+                </div>
+                <div class="float-right">
+                  <button mat-button matStepperPrevious class="btn btn-default default-border">Back</button>&nbsp;&nbsp;&nbsp;
+                  <button mat-button matStepperNext class="btn btn-primary">Next</button>
                 </div>
               </form>
             </mat-step>
             <mat-step>
               <ng-template matStepLabel>Log Tags</ng-template>
               <app-log-tags></app-log-tags>
-              <div>
-                <button mat-button matStepperPrevious>Back</button>
-                <button mat-button (click)="stepper.reset()">Reset</button>
+              <br><br>
+              <div class="float-left">
+                <button mat-button  (click)="close()" class="btn btn-secondary default-border">Close</button>
+              </div>
+              <div class="float-right">
+                <button mat-button matStepperPrevious class="btn btn-secondary default-border">Back</button>&nbsp;&nbsp;&nbsp;
+                <button mat-button (click)="submit()" class="btn btn-primary">Submit</button>
               </div>
             </mat-step>
           </mat-horizontal-stepper>
