--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group animationDuration="0ms">
+<mat-tab-group>
     <mat-tab label="Log Template">
         <mat-horizontal-stepper labelPosition="bottom" #stepper>
             <mat-step [stepControl]="firstFormGroup">
