--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-provider/log-provider.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-provider/log-provider.component.html
@@ -1,15 +1,15 @@
-<form [formGroup]="formGroup">    
-    <opsmx-input [params]="templateNameParams" (onChange)="onChange($event)"></opsmx-input>
+<form [formGroup]="logProviderForm" *ngIf="isProviderParamsLoaded">    
+    <opsmx-input [params]="logProviderService.templateNameParams" (onChange)="onChange($event)"></opsmx-input>
     <div class="text-divider">
         <h4>Logs Monitoring </h4>
     </div>
-    <opsmx-select [params]="logProviderParams" (onChange)="onChange($event)"></opsmx-select>
+    <opsmx-select [params]="logProviderService.logProviderParams" (onChange)="onChange($event)"></opsmx-select>
     <!--kubernetes-->
-    <opsmx-input [params]="namespaceParams" (onChange)="onChange($event)"></opsmx-input>
+    <opsmx-input [params]="logProviderService.namespaceParams" (onChange)="onChange($event)"></opsmx-input>
     <!--kubernetes-->
 
     <!-- other than kubernetes -->
-    <opsmx-select [params]="logAccountParams" (onChange)="onChange($event)"></opsmx-select>
+    <opsmx-select [params]="logProviderService.logAccountParams" (onChange)="onChange($event)"></opsmx-select>
     <!-- other than kubernetes -->
 
     <!-- elastic search-->
@@ -17,35 +17,35 @@
       <div class="text-divider">
         <h4>Elastic Configuration</h4>
       </div>
-      <opsmx-input [params]="indexPatternParams" (onChange)="onChange($event)"></opsmx-input>
-      <opsmx-input [params]="kibanaIndexParams" (onChange)="onChange($event)"></opsmx-input>
+      <opsmx-input [params]="logProviderService.indexPatternParams" (onChange)="onChange($event)"></opsmx-input>
+      <opsmx-input [params]="logProviderService.kibanaIndexParams" (onChange)="onChange($event)"></opsmx-input>
 
       
       <mat-slide-toggle 
       class="example-margin mt-3"
-      [color]="color"
-      [checked]="checked"
-      [disabled]="disabled">
+      [color]="logProviderService.color"
+      [checked]="logProviderService.regExpFilterChecked"
+      [disabled]="logProviderService.regExpFilterDisabled">
       Custom regular expression filter Required
       </mat-slide-toggle>
 
-      <opsmx-input [params]="regularExpressionParams" (onChange)="onChange($event)"></opsmx-input>
-      <opsmx-select [params]="responseKeyParams" (onChange)="onChange($event)"></opsmx-select>
+      <opsmx-input [params]="logProviderService.regularExpressionParams" (onChange)="onChange($event)"></opsmx-input>
+      <opsmx-select [params]="logProviderService.responseKeyParams" (onChange)="onChange($event)"></opsmx-select>
       
       <hr class="ml-0 mt-3 mb-3" />
       
       <div>
         <mat-slide-toggle 
       class="example-margin mt-3"
-      [color]="color"
-      [checked]="checked"
-      [disabled]="disabled">
+      [color]="logProviderService.color"
+      [checked]="logProviderService.autoBaselinechecked"
+      [disabled]="logProviderService.autoBaseLinedisabled">
       Autobaseline
       </mat-slide-toggle>
-      <opsmx-helptext [params]="autoBaseHelpParams"></opsmx-helptext>
+      <opsmx-helptext [params]="logProviderService.autoBaseHelpParams"></opsmx-helptext>
       </div>
       
-      <opsmx-select [params]="senstivityParams" (onChange)="onChange($event)"></opsmx-select>
+      <opsmx-select [params]="logProviderService.senstivityParams" (onChange)="onChange($event)"></opsmx-select>
     <!-- elastic search--> 
     </div>
 </form>
