--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-template-config.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group>
     <mat-tab label="Log Template">
         <mat-horizontal-stepper labelPosition="bottom" #stepper>
-            <mat-step [stepControl]="firstFormGroup">
-              <form [formGroup]="firstFormGroup">
+            <mat-step [stepControl]="logProviderForm">
+              <form [formGroup]="logProviderForm">
                 <ng-template matStepLabel>Log Provider</ng-template>
                 <app-log-provider></app-log-provider>
                 <br>
