updated dashboard heading

--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main_content">
   <div class="page_title d-flex align-items-center">
-    <h2>Deployment Dashboard </h2>
+    <h2>Deployments Dashboard </h2>
   </div>
   <div class="page-content">
     <div class="h-100 p-4 d-flex flex-column">
