--- a/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -11,10 +11,9 @@
   [showYAxisLabel]="showYAxisLabel"
   [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
-  [maxYAxisTickLength]="maxYAxisTickLength"
-  [maxXAxisTickLength]="maxXAxisTickLength"
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
+  [roundEdges]="roundEdgesType"
   style="fill: #999999;">
 </ngx-charts-bar-horizontal>
