--- a/src/app/cd-dashboard/cd-dashboard.component.less
+++ b/src/app/cd-dashboard/cd-dashboard.component.less
@@ -16,3 +16,10 @@
         color: #999;
     }
 }
+.chart-legend .legend-title-text {
+    vertical-align: bottom;
+    display: none !important;
+    line-height: 16px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
