showing the top 5 bar values on subcharts

--- a/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -2,7 +2,7 @@
   [view]="view"
   [scheme]="colorScheme"
   [animations]="animations"
-  [results]="dataSource"
+  [results]="finalArrayData"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
