--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -1,7 +1,7 @@
 <ngx-charts-bar-horizontal-stacked
   [view]="view"
   [scheme]="colorScheme"
-  [results]="dataSource"
+  [results]="stackedFinalData"
   [animations]="animations"
   [gradient]="gradient"
   [xAxis]="showXAxis"
