truncated xaxis values to integer and color changes

--- a/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
+++ b/src/app/charts/horizontal-bar-chart/horizontal-bar-chart.component.html
@@ -15,5 +15,6 @@
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
   [roundEdges]="roundEdgesType"
+  [xAxisTickFormatting]="axisFormat"
   style="fill: #999999;">
 </ngx-charts-bar-horizontal>
