--- a/src/app/application-onboarding/application/application-creation/log-template-config/log-topics/log-topics.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template-config/log-topics/log-topics.component.html
@@ -1,2 +1,2 @@
-<opsmx-form-grid [height]="'260px'" [id]="topics" [header]="service.formGridHeaders" [formArrayObj]="logTopicsForm"
+<opsmx-form-grid [height]="'260px'" [id]="'topics'" [header]="service.formGridHeaders" [formArrayObj]="logTopicsForm"
     (onChange)="onChange($event)" (addRow)="addRow($event)" (deleteRow)="deleteRow($event)"></opsmx-form-grid>
