--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -387,6 +387,11 @@
                                             <i style="color:#4797de !important;" class="fas fa-pencil-alt"></i>
                                           </a>
                                         </span>
+                                        <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template">
+                                          <a  (click)="onClickLogTemplate(true)" class="btn-link">
+                                            <i class="fas fa-plus"></i>
+                                          </a>
+                                        </span>
                                       </div>
                                     </div>
                                     <div class="form-group mb-3 text-muted">
